--- a/src/app/add-procduct/add-procduct.component.html
+++ b/src/app/add-procduct/add-procduct.component.html
@@ -49,17 +49,17 @@
                         <div class="col-sm-9 row" style="padding-left: 4%;">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="productCondition" id="newCondition" [(ngModel)]="productCondition"
-                                    value="option1">
+                                    value="New">
                                 <label class="form-check-label" for="inlineRadio1">New</label>
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="productCondition" id="oldCondition" [(ngModel)]="productCondition"
-                                    value="option2">
+                                    value="Old">
                                 <label class="form-check-label" for="inlineRadio2">Old</label>
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="productCondition" id="refurbishedCondition" [(ngModel)]="productCondition"
-                                    value="option3">
+                                    value="Refurbished">
                                 <label class="form-check-label" for="inlineRadio3">Refurbished</label>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                             <div class="custom-file">
 
                                     <input type="file" class="custom-file-input" (change)="onFileChanged($event)">
-                                    <img [src]="imgURL" height="200" *ngIf="imgURL">
+                                    
                                     
                                 <label class="custom-file-label" for="fileImage">Choose file</label>
                             </div>
@@ -87,7 +87,7 @@
                 </form>
             </div>
             <div class="col-4">
-                <img src="https://picsum.photos/200/300" alt="test" />
+                <img [src]="imgURL" height="200" *ngIf="imgURL">
             </div>
         </div>
     </div>
