--- a/src/app/details-product/details-product.component.html
+++ b/src/app/details-product/details-product.component.html
@@ -12,7 +12,7 @@
             background-size: cover;
             "> -->
             <div class="col-5">
-                <img src="https://picsum.photos/200/300" alt="test" style="width: 100%; height: 40%;" />
+                <img src="data:image/gif;base64,{{imgCode}}" alt="test" style="width: 50%;">
             </div>
             <div class="col-5">
                 <h4>{{productName}}</h4>
